--- a/urbanSOS/app.json
+++ b/urbanSOS/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "my-app_route",
-    "slug": "my-app_route",
+    "name": "urbansos_react",
+    "slug": "urbansos_react",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
