--- a/urbansos/app.json
+++ b/urbansos/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "urbansos_react",
-    "slug": "urbansos_react",
+    "name": "urbansos",
+    "slug": "urbansos",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -11,9 +11,6 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
     "ios": {
       "supportsTablet": true
     },
