--- a/urbansos/package.json
+++ b/urbansos/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-app_route",
+  "name": "urbansos",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -12,18 +12,18 @@
     "@expo/vector-icons": "^14.0.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "date-fns": "^3.6.0",
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.11",
+    "expo-image-picker": "^15.0.5",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.16.1",
+    "react-native": "0.74.2",
     "react-native-paper": "^5.12.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
